[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/enemy/boss/Boss2/Boss2Flak.gd" type="Script" id=1]
[ext_resource path="res://graphics/enemy/boss/boss2/boss2flak6.png" type="Texture" id=2]
[ext_resource path="res://graphics/enemy/boss/boss2/boss2flak1.png" type="Texture" id=3]
[ext_resource path="res://graphics/enemy/boss/boss2/boss2flak2.png" type="Texture" id=4]
[ext_resource path="res://graphics/enemy/boss/boss2/boss2flak3.png" type="Texture" id=5]
[ext_resource path="res://graphics/enemy/boss/boss2/boss2flak4.png" type="Texture" id=6]
[ext_resource path="res://graphics/enemy/boss/boss2/boss2flak5.png" type="Texture" id=7]
[ext_resource path="res://graphics/enemy/boss/boss2/boss2flak7.png" type="Texture" id=8]
[ext_resource path="res://scenes/sound/PlayerHit.tscn" type="PackedScene" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "normal",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 2 ) ],
"loop": false,
"name": "start",
"speed": 7.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "hidden",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "destroyed",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6.96519, 7.12336 )

[sub_resource type="Animation" id=3]
resource_name = "damage"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.87451, 0.235294, 0.235294, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Boss2Flak" type="KinematicBody2D"]
script = ExtResource( 1 )
hp = 21

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "hidden"
playing = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -1, 0 )

[node name="Timer" type="Timer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimatedSprite")
anims/damage = SubResource( 3 )

[node name="PlayerHit" parent="." instance=ExtResource( 9 )]

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
